--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 	"dependencies": {
 		"@wordpress/block-editor": "latest",
 		"@wordpress/blocks": "latest",
-		"@wordpress/i18n": "latest"
+		"@wordpress/i18n": "latest",
+		"chart.js": "^4.4.1"
 	},
 	"devDependencies": {
 		"@wordpress/scripts": "^31.3.0"
