--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"@wordpress/block-editor": "latest",
 		"@wordpress/blocks": "latest",
 		"@wordpress/i18n": "latest",
-		"chart.js": "^4.4.1"
+		"chart.js": "^4.4.1",
+		"react-chartjs-2": "^5.2.0"
 	},
 	"devDependencies": {
 		"@wordpress/scripts": "^31.3.0"
