--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
 		"@wordpress/blocks": "latest",
 		"@wordpress/i18n": "latest",
 		"chart.js": "^4.4.1",
-		"react-chartjs-2": "^5.2.0"
+		"react-chartjs-2": "^5.2.0",
+		"three": "^0.159.0"
 	},
 	"devDependencies": {
 		"@types/chart.js": "^2.9.41",
+		"@types/three": "^0.159.0",
 		"@types/wordpress__block-editor": "^15.0.0",
 		"@types/wordpress__blocks": "^12.5.18",
 		"@types/wordpress__components": "^23.0.12",
